Wrapped in responsive div

--- a/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
+++ b/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
@@ -101,66 +101,71 @@
         </div>
 
         <!-- Exercise Statistics Table -->
-        <table class="table table-bordered table-sm body-striped">
-            <thead class="thead-dark">
-                <tr>
-                    <th>
-                        {{ 'artemisApp.examScores.titleExerciseGroupColumn' | translate }}
-                    </th>
-                    <th>
-                        {{ 'artemisApp.examScores.participantsColumn' | translate }}
-                        <jhi-help-icon placement="right" text="artemisApp.examScores.participantsExerciseGroupTooltip"></jhi-help-icon>
-                    </th>
-                    <th>
-                        {{ 'artemisApp.examScores.averagePointsColumn' | translate }}
-                        <jhi-help-icon placement="right" text="artemisApp.examScores.averageExerciseGroupTooltip"></jhi-help-icon>
-                    </th>
-                    <th>
-                        {{ 'artemisApp.examScores.titleExerciseColumn' | translate }}
-                    </th>
-                    <th>
-                        {{ 'artemisApp.examScores.participantsColumn' | translate }}
-                        <jhi-help-icon placement="right" text="artemisApp.examScores.participantsExerciseTooltip"></jhi-help-icon>
-                    </th>
-                    <th>
-                        {{ 'artemisApp.examScores.averagePointsColumn' | translate }}
-                        <jhi-help-icon placement="right" text="artemisApp.examScores.averageExerciseTooltip"></jhi-help-icon>
-                    </th>
-                </tr>
-            </thead>
-            <tbody *ngFor="let exerciseGroupResult of aggregatedExerciseGroupResults">
-                <tr *ngFor="let exerciseResult of exerciseGroupResult.exerciseResults; first as isFirst">
-                    <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
-                        {{ exerciseGroupResult.title }}
-                    </td>
-                    <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
-                        {{ exerciseGroupResult.noOfParticipantsWithFilter }} / {{ exerciseGroupResult.totalParticipants }} ({{
-                            roundAndPerformLocalConversion((exerciseGroupResult.noOfParticipantsWithFilter / exerciseGroupResult.totalParticipants) * 100, 2, 2)
-                        }}
-                        %)
-                    </td>
-                    <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
-                        {{ exerciseGroupResult.averagePoints !== null ? roundAndPerformLocalConversion(exerciseGroupResult.averagePoints, 2, 2) : '-' }}
-                        /
-                        {{ toLocaleString(exerciseGroupResult.maxPoints) }}
-                        ({{ exerciseGroupResult.averagePercentage !== null ? roundAndPerformLocalConversion(exerciseGroupResult.averagePercentage, 2, 2) : '-' }} %)
-                    </td>
-                    <td>{{ exerciseResult.title }}</td>
-                    <td>
-                        {{ exerciseResult.noOfParticipantsWithFilter }} / {{ exerciseResult.totalParticipants }} ({{
-                            roundAndPerformLocalConversion((exerciseResult.noOfParticipantsWithFilter / exerciseResult.totalParticipants) * 100, 2, 2)
-                        }}
-                        %)
-                    </td>
-                    <td>
-                        {{ exerciseResult.averagePoints !== null ? roundAndPerformLocalConversion(exerciseResult.averagePoints, 2, 2) : '-' }}
-                        /
-                        {{ toLocaleString(exerciseResult.maxPoints) }}
-                        ({{ exerciseResult.averagePercentage !== null ? roundAndPerformLocalConversion(exerciseResult.averagePercentage, 2, 2) : '-' }} %)
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="table table-bordered table-sm body-striped">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>
+                            {{ 'artemisApp.examScores.titleExerciseGroupColumn' | translate }}
+                        </th>
+                        <th>
+                            {{ 'artemisApp.examScores.participantsColumn' | translate }}
+                            <jhi-help-icon placement="right" text="artemisApp.examScores.participantsExerciseGroupTooltip"></jhi-help-icon>
+                        </th>
+                        <th>
+                            {{ 'artemisApp.examScores.averagePointsColumn' | translate }}
+                            <jhi-help-icon placement="right" text="artemisApp.examScores.averageExerciseGroupTooltip"></jhi-help-icon>
+                        </th>
+                        <th>
+                            {{ 'artemisApp.examScores.titleExerciseColumn' | translate }}
+                        </th>
+                        <th>
+                            {{ 'artemisApp.examScores.participantsColumn' | translate }}
+                            <jhi-help-icon placement="right" text="artemisApp.examScores.participantsExerciseTooltip"></jhi-help-icon>
+                        </th>
+                        <th>
+                            {{ 'artemisApp.examScores.averagePointsColumn' | translate }}
+                            <jhi-help-icon placement="right" text="artemisApp.examScores.averageExerciseTooltip"></jhi-help-icon>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody *ngFor="let exerciseGroupResult of aggregatedExerciseGroupResults">
+                    <tr *ngFor="let exerciseResult of exerciseGroupResult.exerciseResults; first as isFirst">
+                        <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
+                            {{ exerciseGroupResult.title }}
+                        </td>
+                        <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
+                            {{ exerciseGroupResult.noOfParticipantsWithFilter }}
+                            / {{ exerciseGroupResult.totalParticipants }} ({{
+                                roundAndPerformLocalConversion((exerciseGroupResult.noOfParticipantsWithFilter / exerciseGroupResult.totalParticipants) * 100, 2, 2)
+                            }}
+                            %)
+                        </td>
+                        <td *ngIf="isFirst" [rowSpan]="exerciseGroupResult.exerciseResults.length">
+                            {{ exerciseGroupResult.averagePoints !== null ? roundAndPerformLocalConversion(exerciseGroupResult.averagePoints, 2, 2) : '-' }}
+                            /
+                            {{ toLocaleString(exerciseGroupResult.maxPoints) }}
+                            ({{ exerciseGroupResult.averagePercentage !== null ? roundAndPerformLocalConversion(exerciseGroupResult.averagePercentage, 2, 2) : '-' }}
+                            %)
+                        </td>
+                        <td>{{ exerciseResult.title }}</td>
+                        <td>
+                            {{ exerciseResult.noOfParticipantsWithFilter }} / {{ exerciseResult.totalParticipants }} ({{
+                                roundAndPerformLocalConversion((exerciseResult.noOfParticipantsWithFilter / exerciseResult.totalParticipants) * 100, 2, 2)
+                            }}
+                            %)
+                        </td>
+                        <td>
+                            {{ exerciseResult.averagePoints !== null ? roundAndPerformLocalConversion(exerciseResult.averagePoints, 2, 2) : '-' }}
+                            /
+                            {{ toLocaleString(exerciseResult.maxPoints) }}
+                            ({{ exerciseResult.averagePercentage !== null ? roundAndPerformLocalConversion(exerciseResult.averagePercentage, 2, 2) : '-' }}
+                            %)
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
         <!-- Student Result Table -->
         <h4>
