make complaints work

--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
@@ -123,6 +123,7 @@
             [result]="checkIfManualResultExist()"
             [exercise]="exercise"
             [canOverride]="canOverride"
+            [complaint]="complaint"
             (onResultModified)="onResultModified($event)"
         ></jhi-programming-assessment-manual-result-in-code-editor>
     </jhi-code-editor-grid>
