use new endpoint to retrieve information about automatic result and manual display automatic result

--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
@@ -47,7 +47,7 @@
                 jhiTranslate="artemisApp.tutorExerciseDashboard.programmingExercise.goToRepo"
                 >Go to repository</a
             >
-            <jhi-updating-result
+            <!-- <jhi-updating-result
                 *ngIf="participation"
                 [exercise]="exercise"
                 [showUngradedResults]="true"
@@ -55,7 +55,16 @@
                 [participation]="participationForAssessment"
                 [short]="true"
                 class="mr-2"
-            ></jhi-updating-result>
+            ></jhi-updating-result> -->
+            <jhi-result
+                *ngIf="participation"
+                [result]="automaticResult"
+                [showUngradedResults]="true"
+                [showGradedBadge]="true"
+                [isBuilding]="false"
+                [participation]="participationForAssessment"
+                [short]="true"
+                ></jhi-result>
             <jhi-updating-result
                 *ngIf="participation"
                 [exercise]="exercise"
