cleanup after merge

--- a/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
@@ -36,6 +36,7 @@
         [annotations]="annotations"
         [commitState]="commitState"
         [editorState]="editorState"
+        [isTutorAssessment]="isTutorAssessment"
         (onFileContentChange)="onFileContentChange($event)"
         (onError)="onError($event)"
     ></jhi-code-editor-ace>
