--- a/src/main/webapp/app/exercises/programming/shared/code-editor/layout/code-editor-grid.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/layout/code-editor-grid.component.html
@@ -28,6 +28,9 @@
         <!-- Required for resizing; don't remove empty span -->
         <!--<fa-icon [icon]="'grip-lines'" class="rg-main-bottom text-lightgrey"><span></span></fa-icon> -->
     </div>
+    <div *ngIf="isTutorAssessment">
+        <ng-content select="[editorBottom]"></ng-content>
+    </div>
     <div class="editor-bottom collapsable">
         <ng-content select="[editorBottomArea]" class="editor-bottom-resizable"></ng-content>
         <!-- Required for resizing; don't remove empty span -->
