do not display action buttons

--- a/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
@@ -5,6 +5,7 @@
         <div class="d-flex align-items-center ml-auto">
             <ng-content select="[editorToolbar]"></ng-content>
             <jhi-code-editor-actions
+                *ngIf="!isTutorAssessment"
                 [buildable]="buildable"
                 [disableActions]="!editable"
                 [unsavedFiles]="unsavedFiles"
