remove not needed alerts as parent component has it fix typo add copy of participation for manual results

--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
@@ -59,7 +59,7 @@
                 [exercise]="exercise"
                 [showUngradedResults]="true"
                 [showGradedBadge]="true"
-                [participation]="participation"
+                [participation]="participationForManualResult"
                 [short]="true"
                 class="mr-2"
             ></jhi-updating-result>
